--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -19,6 +19,7 @@ body{
     font-weight: bold;
     color: #f1f1f1;
     border-radius: 5px;
+    cursor: pointer;
     
     
 }
@@ -32,7 +33,10 @@ body{
 /* main style */
 header{
     background-color: #FFF8F3;
+    background: url(../images/developer.png),url(../images/header_bg.png) , #FFF8F3;
+    background-position: top left , bottom right ;
     padding-top: 50px;
+    background-repeat: no-repeat;
 }
 nav{
     width: 71%;
@@ -54,4 +58,36 @@ nav .nav-links a{
     font-size: 20px;
     text-decoration: none;
     
+}
+#banner{
+    /* border: 1px solid red; */
+    display: flex;
+    margin: 47px 38px 0 230px;
+    justify-content: space-between;
+    align-items: center;
+}
+#banner .banner-content {
+    max-width: 585px;
+}
+#banner .banner-content h2{
+    font-size: 45px;
+    font-weight:600px;
+    color: #474747;
+    margin-bottom: 5px;
+}
+#banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+}
+#banner .banner-content p{
+    font-size: 18px;
+    width: 584px;
+    color: #757575;
+    text-align: justify;
+    margin-bottom: 20px;
+    line-height: 30px;
+}
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
 }
